machine.go
//line machine.go.rl:1
package legacysyslog

import (
	"bytes"
	"fmt"
	"strconv"
	"time"

	"github.com/influxdata/go-syslog/v2/common"
)

var _ = fmt.Print

//line machine.go.rl:227

//line machine.go:22
const start int = 1
const first_final int = 51

const en_main int = 1

//line machine.go.rl:230

type machine struct {
	data       []byte
	cs         int
	p, pe, eof int
	// general mark
	pb int
	// hostname machine can run in parallel to the tag machine since it is not clear from the beginning
	// if it is a hostname or tag
	pHostname int
	// same for the timestamp
	pTimestamp int

	err        error
	bestEffort bool
}

// NewMachine creates a new FSM able to parse RFC3164 syslog messages.
func NewMachine() *machine {
	m := &machine{}

//line machine.go.rl:252

//line machine.go.rl:253

//line machine.go.rl:254

//line machine.go.rl:255

//line machine.go.rl:256

	return m
}

// Err returns the error that occurred on the last call to Parse.
// If the result is nil, then the line was parsed successfully.
func (m *machine) Err() error {
	return m.err
}

func (m *machine) text() []byte {
	return m.data[m.pb:m.p]
}

// Parse parses the input byte array as a RFC3164 syslog message.
func (m *machine) Parse(input []byte) (*SyslogMessage, error) {
	m.data = input
	m.p = 0
	m.pb = 0
	m.pHostname = 0
	m.pTimestamp = 0
	m.pe = len(input)
	m.eof = len(input)
	m.err = nil

	output := &syslogMessage{}

//line machine.go:89
	{
		m.cs = start
	}

//line machine.go.rl:284

//line machine.go:96
	{
		if (m.p) == (m.pe) {
			goto _test_eof
		}
		switch m.cs {
		case 1:
			goto st_case_1
		case 2:
			goto st_case_2
		case 51:
			goto st_case_51
		case 52:
			goto st_case_52
		case 53:
			goto st_case_53
		case 3:
			goto st_case_3
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 0:
			goto st_case_0
		case 54:
			goto st_case_54
		case 55:
			goto st_case_55
		case 56:
			goto st_case_56
		case 57:
			goto st_case_57
		case 58:
			goto st_case_58
		case 59:
			goto st_case_59
		case 60:
			goto st_case_60
		case 61:
			goto st_case_61
		case 62:
			goto st_case_62
		case 63:
			goto st_case_63
		case 64:
			goto st_case_64
		case 65:
			goto st_case_65
		case 66:
			goto st_case_66
		case 67:
			goto st_case_67
		case 68:
			goto st_case_68
		case 69:
			goto st_case_69
		case 70:
			goto st_case_70
		case 71:
			goto st_case_71
		case 72:
			goto st_case_72
		case 73:
			goto st_case_73
		case 74:
			goto st_case_74
		case 75:
			goto st_case_75
		case 76:
			goto st_case_76
		case 77:
			goto st_case_77
		case 78:
			goto st_case_78
		case 79:
			goto st_case_79
		case 80:
			goto st_case_80
		case 81:
			goto st_case_81
		case 82:
			goto st_case_82
		case 83:
			goto st_case_83
		case 84:
			goto st_case_84
		case 85:
			goto st_case_85
		case 86:
			goto st_case_86
		case 87:
			goto st_case_87
		case 88:
			goto st_case_88
		case 89:
			goto st_case_89
		case 90:
			goto st_case_90
		case 91:
			goto st_case_91
		case 92:
			goto st_case_92
		case 93:
			goto st_case_93
		case 94:
			goto st_case_94
		case 95:
			goto st_case_95
		case 96:
			goto st_case_96
		case 97:
			goto st_case_97
		case 98:
			goto st_case_98
		case 99:
			goto st_case_99
		case 100:
			goto st_case_100
		case 101:
			goto st_case_101
		case 102:
			goto st_case_102
		case 103:
			goto st_case_103
		case 104:
			goto st_case_104
		case 105:
			goto st_case_105
		case 106:
			goto st_case_106
		case 107:
			goto st_case_107
		case 108:
			goto st_case_108
		case 109:
			goto st_case_109
		case 110:
			goto st_case_110
		case 111:
			goto st_case_111
		case 112:
			goto st_case_112
		case 113:
			goto st_case_113
		case 114:
			goto st_case_114
		case 115:
			goto st_case_115
		case 116:
			goto st_case_116
		case 117:
			goto st_case_117
		case 118:
			goto st_case_118
		case 119:
			goto st_case_119
		case 120:
			goto st_case_120
		case 121:
			goto st_case_121
		case 122:
			goto st_case_122
		case 123:
			goto st_case_123
		case 124:
			goto st_case_124
		case 125:
			goto st_case_125
		case 126:
			goto st_case_126
		case 127:
			goto st_case_127
		case 128:
			goto st_case_128
		case 129:
			goto st_case_129
		case 130:
			goto st_case_130
		case 131:
			goto st_case_131
		case 132:
			goto st_case_132
		case 133:
			goto st_case_133
		case 134:
			goto st_case_134
		case 135:
			goto st_case_135
		case 136:
			goto st_case_136
		case 137:
			goto st_case_137
		case 138:
			goto st_case_138
		case 139:
			goto st_case_139
		case 140:
			goto st_case_140
		case 141:
			goto st_case_141
		case 142:
			goto st_case_142
		case 143:
			goto st_case_143
		case 144:
			goto st_case_144
		case 145:
			goto st_case_145
		case 146:
			goto st_case_146
		case 147:
			goto st_case_147
		case 148:
			goto st_case_148
		case 149:
			goto st_case_149
		case 150:
			goto st_case_150
		case 151:
			goto st_case_151
		case 152:
			goto st_case_152
		case 153:
			goto st_case_153
		case 154:
			goto st_case_154
		case 155:
			goto st_case_155
		case 156:
			goto st_case_156
		case 157:
			goto st_case_157
		case 158:
			goto st_case_158
		case 159:
			goto st_case_159
		case 160:
			goto st_case_160
		case 161:
			goto st_case_161
		case 162:
			goto st_case_162
		case 163:
			goto st_case_163
		case 164:
			goto st_case_164
		case 165:
			goto st_case_165
		case 166:
			goto st_case_166
		case 167:
			goto st_case_167
		case 168:
			goto st_case_168
		case 169:
			goto st_case_169
		case 170:
			goto st_case_170
		case 171:
			goto st_case_171
		case 172:
			goto st_case_172
		case 173:
			goto st_case_173
		case 174:
			goto st_case_174
		case 175:
			goto st_case_175
		case 176:
			goto st_case_176
		case 177:
			goto st_case_177
		case 178:
			goto st_case_178
		case 179:
			goto st_case_179
		case 180:
			goto st_case_180
		case 181:
			goto st_case_181
		case 182:
			goto st_case_182
		case 183:
			goto st_case_183
		case 184:
			goto st_case_184
		case 185:
			goto st_case_185
		case 186:
			goto st_case_186
		case 187:
			goto st_case_187
		case 188:
			goto st_case_188
		case 189:
			goto st_case_189
		case 190:
			goto st_case_190
		case 191:
			goto st_case_191
		case 6:
			goto st_case_6
		case 7:
			goto st_case_7
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 10:
			goto st_case_10
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 22:
			goto st_case_22
		case 23:
			goto st_case_23
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 26:
			goto st_case_26
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 29:
			goto st_case_29
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 35:
			goto st_case_35
		case 36:
			goto st_case_36
		case 37:
			goto st_case_37
		case 38:
			goto st_case_38
		case 39:
			goto st_case_39
		case 40:
			goto st_case_40
		case 41:
			goto st_case_41
		case 42:
			goto st_case_42
		case 43:
			goto st_case_43
		case 44:
			goto st_case_44
		case 45:
			goto st_case_45
		case 46:
			goto st_case_46
		case 47:
			goto st_case_47
		case 192:
			goto st_case_192
		case 48:
			goto st_case_48
		case 49:
			goto st_case_49
		case 50:
			goto st_case_50
		}
		goto st_out
	st_case_1:
		switch (m.data)[(m.p)] {
		case 32:
			goto tr1
		case 42:
			goto tr2
		case 46:
			goto tr2
		case 58:
			goto tr4
		case 60:
			goto tr5
		case 65:
			goto tr6
		case 68:
			goto tr7
		case 70:
			goto tr8
		case 74:
			goto tr9
		case 77:
			goto tr10
		case 78:
			goto tr11
		case 79:
			goto tr12
		case 83:
			goto tr13
		case 91:
			goto tr14
		}
		if 48 <= (m.data)[(m.p)] && (m.data)[(m.p)] <= 57 {
			goto tr3
		}
		goto tr0
	tr0:
//line machine.go.rl:21

		m.pb = m.p

		goto st2
	tr26:
//line machine.go.rl:43

		switch m.data[m.p-1] {
		case '.':
			output.ciscoTimestampExt = CiscoTimeClockModeSynced
		case '*':
			output.ciscoTimestampExt = CiscoTimeClockModeUnsynced
		}

//line machine.go.rl:21

		m.pb = m.p

		goto st2
	st2:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof2
		}
	st_case_2:
//line machine.go:551
		switch (m.data)[(m.p)] {
		case 32:
			goto tr16
		case 58:
			goto tr16
		case 91:
			goto tr17
		}
		goto st2
	tr82:
//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st51
	tr16:
//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st51
	tr19:
//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:112

		output.contentSet = true
		output.content = string(m.text())

		goto st51
	tr22:
//line machine.go.rl:112

		output.contentSet = true
		output.content = string(m.text())

		goto st51
	tr27:
//line machine.go.rl:43

		switch m.data[m.p-1] {
		case '.':
			output.ciscoTimestampExt = CiscoTimeClockModeSynced
		case '*':
			output.ciscoTimestampExt = CiscoTimeClockModeUnsynced
		}

//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st51
	st51:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof51
		}
	st_case_51:
//line machine.go:622
		if (m.data)[(m.p)] == 32 {
			goto tr77
		}
		goto tr76
	tr76:
//line machine.go.rl:21

		m.pb = m.p

		goto st52
	st52:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof52
		}
	st_case_52:
//line machine.go:638
		goto st52
	tr77:
//line machine.go.rl:21

		m.pb = m.p

		goto st53
	st53:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof53
		}
	st_case_53:
//line machine.go:651
		goto tr76
	tr14:
//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st3
	tr17:
//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st3
	tr37:
//line machine.go.rl:43

		switch m.data[m.p-1] {
		case '.':
			output.ciscoTimestampExt = CiscoTimeClockModeSynced
		case '*':
			output.ciscoTimestampExt = CiscoTimeClockModeUnsynced
		}

//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st3
	st3:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof3
		}
	st_case_3:
//line machine.go:696
		switch (m.data)[(m.p)] {
		case 32:
			goto tr19
		case 58:
			goto tr19
		case 93:
			goto tr20
		}
		goto tr18
	tr18:
//line machine.go.rl:21

		m.pb = m.p

		goto st4
	st4:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof4
		}
	st_case_4:
//line machine.go:717
		switch (m.data)[(m.p)] {
		case 32:
			goto tr22
		case 58:
			goto tr22
		case 93:
			goto tr23
		}
		goto st4
	tr20:
//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:112

		output.contentSet = true
		output.content = string(m.text())

		goto st5
	tr23:
//line machine.go.rl:112

		output.contentSet = true
		output.content = string(m.text())

		goto st5
	st5:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof5
		}
	st_case_5:
//line machine.go:750
		switch (m.data)[(m.p)] {
		case 32:
			goto st51
		case 58:
			goto st51
		}
		goto st0
	st_case_0:
	st0:
		m.cs = 0
		goto _out
	tr245:
//line machine.go.rl:21

		m.pb = m.p

		goto st54
	tr1:
//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st54
	st54:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof54
		}
	st_case_54:
//line machine.go:784
		switch (m.data)[(m.p)] {
		case 32:
			goto tr1
		case 42:
			goto tr80
		case 46:
			goto tr80
		case 58:
			goto tr82
		case 65:
			goto tr83
		case 68:
			goto tr84
		case 70:
			goto tr85
		case 74:
			goto tr86
		case 77:
			goto tr87
		case 78:
			goto tr88
		case 79:
			goto tr89
		case 83:
			goto tr90
		case 91:
			goto tr91
		}
		if 48 <= (m.data)[(m.p)] && (m.data)[(m.p)] <= 57 {
			goto tr81
		}
		goto tr79
	tr79:
//line machine.go.rl:21

		m.pb = m.p

		goto st55
	tr98:
//line machine.go.rl:43

		switch m.data[m.p-1] {
		case '.':
			output.ciscoTimestampExt = CiscoTimeClockModeSynced
		case '*':
			output.ciscoTimestampExt = CiscoTimeClockModeUnsynced
		}

//line machine.go.rl:21

		m.pb = m.p

		goto st55
	st55:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof55
		}
	st_case_55:
//line machine.go:843
		switch (m.data)[(m.p)] {
		case 32:
			goto tr16
		case 58:
			goto tr16
		case 91:
			goto tr93
		}
		goto st55
	tr91:
//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st56
	tr93:
//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st56
	tr108:
//line machine.go.rl:43

		switch m.data[m.p-1] {
		case '.':
			output.ciscoTimestampExt = CiscoTimeClockModeSynced
		case '*':
			output.ciscoTimestampExt = CiscoTimeClockModeUnsynced
		}

//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st56
	tr142:
//line machine.go.rl:52

		{
			t, err := time.Parse("2006-01-02T15:04:05.999999Z07:00", string(m.data[m.pTimestamp:m.p]))
			if err != nil {
				m.err = err
				return output.export(), m.err
			}
			output.timestampSet = true
			output.timestamp = t
		}

//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st56
	tr230:
//line machine.go.rl:64

		{
			t, err := time.Parse(time.Stamp, string(m.data[m.pTimestamp:m.p]))
			if err != nil {
				m.err = err
				return output.export(), m.err
			}
			output.timestampSet = true
			output.timestamp = t
		}

//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:107

		output.tagSet = true
		output.tag = string(m.text())

		goto st56
	st56:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof56
		}
	st_case_56:
//line machine.go:942
		switch (m.data)[(m.p)] {
		case 32:
			goto tr19
		case 58:
			goto tr19
		case 93:
			goto tr95
		}
		goto tr94
	tr94:
//line machine.go.rl:21

		m.pb = m.p

		goto st57
	st57:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof57
		}
	st_case_57:
//line machine.go:963
		switch (m.data)[(m.p)] {
		case 32:
			goto tr22
		case 58:
			goto tr22
		case 93:
			goto tr97
		}
		goto st57
	tr95:
//line machine.go.rl:21

		m.pb = m.p

//line machine.go.rl:112

		output.contentSet = true
		output.content = string(m.text())

		goto st58
	tr97:
//line machine.go.rl:112

		output.contentSet = true
		output.content = string(m.text())

		goto st58
	st58:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof58
		}
	st_case_58:
//line machine.go:996
		switch (m.data)[(m.p)] {
		case 32:
			goto st51
		case 58:
			goto st51
		}
		goto st52
	tr80:
//line machine.go.rl:21

		m.pb = m.p

		goto st59
	st59:
		if (m.p)++; (m.p) == (m.pe) {
			goto _test_eof59
		}
	st_case_59:
//line machine.go:1015
		switch (m.data)[(m.p)] {
		case 32:
			goto tr27
		case 58:
			goto tr27
		case 65:
			goto tr100
		case 68:
			goto tr101
		case 70:
			goto tr102
		case 74:
			goto tr103
		case 77:
			goto tr104
		case 78:
			goto tr105
		case 79:
			goto tr106
		case 83:
			goto tr107
		case 91:
			goto tr108
		}
		if 48 <= (m.data)[(m.p)] && (m.data)[(m.p)] <= 57 {
			goto tr99
		}
		goto tr98
	tr81:
//line machine.go.rl:29

		m.pTimestamp = m.p

//line machine.go.rl:21

		m.pb = m.p

		goto st60
	tr99:
//line machine.go.rl:43

		switch m.data[m.p-1] {
		case '.':
			output.ciscoTimestampExt = CiscoTimeClockModeSynced
		case '*':
			output.ciscoTimestampExt = CiscoTimeClockModeUnsynced
		}

//line machine.go.rl:29

		m.pTimestamp = m.p

//line machine.go.rl:21

		m.pb = m.p
